--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello, world</title>
+
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
