--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello, world</title>
+    <title>React Metawidget Address Book</title>
 
     <link href="styles.css" rel="stylesheet">
 </head>
