--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id="root"></div>
-    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+    <div id="metawidget"></div>
+    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>    
 </body>
 </html>
